--- a/var/langs/en/addons/sd_departments.po
+++ b/var/langs/en/addons/sd_departments.po
@@ -1,1 +1,1 @@
-/home/ju/public_html/sd_departments/var/langs/en/addons/sd_departments.po
+../../../../../sd_departments/var/langs/en/addons/sd_departments.po
