--- a/var/langs/ru/addons/sd_departments.po
+++ b/var/langs/ru/addons/sd_departments.po
@@ -1,1 +1,25 @@
-../../../../../sd_departments/var/langs/ru/addons/sd_departments.po
+msgid ""
+msgstr ""
+"Project-Id-Version: cs-cart-latest\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Language-Team: Russian\n"
+"Language: ru_RU\n"
+"Plural-Forms: nplurals=4; plural=((n%10==1 && n%100!=11) ? 0 : ((n%10 >= 2 && n%10 <=4 && (n%100 < 12 || n%100 > 14)) ? 1 : ((n%10 == 0 || (n%10 >= 5 && n%10 <=9)) || (n%100 >= 11 && n%100 <= 14)) ? 2 : 3));\n"
+"X-Crowdin-Project: cs-cart-latest\n"
+"X-Crowdin-Project-ID: 50163\n"
+"X-Crowdin-Language: ru\n"
+"X-Crowdin-File: /release-4.15.1/addons/sd_departments.po\n"
+"X-Crowdin-File-ID: 6580\n"
+"PO-Revision-Date: 2022-07-20 14:34\n"
+
+msgctxt "Addons::name::sd_departments"
+msgid "Simtech Development: Departments"
+msgstr "Simtech Development: Отделы"
+
+msgctxt "Addons::description::sd_departments"
+msgid "Allows you to add departments."
+msgstr "Позволяет добавлять отделы."
+
+msgctxt "SettingsSections::sd_departments.departments"
+msgid "Departments"
+msgstr "Отделы"
