SCHOOL-299 : SD Department : Fixed langvar for SD_department

--- a/var/langs/en/addons/sd_departments.po
+++ b/var/langs/en/addons/sd_departments.po
@@ -16,6 +16,10 @@ msgctxt "SettingsSections::sd_departments.departments"
 msgid "Departments"
 msgstr "Departments"
 
+msgctxt "Languages::sd_departments.departments"
+msgid "Departments"
+msgstr "Departments"
+
 msgctxt "Languages::department"
 msgid "Department"
 msgstr "Department"
