--- a/var/langs/ru/addons/sd_departments.po
+++ b/var/langs/ru/addons/sd_departments.po
@@ -24,6 +24,10 @@ msgctxt "SettingsSections::sd_departments.departments"
 msgid "Departments"
 msgstr "Отделы"
 
+msgctxt "Languages::sd_departments.departments"
+msgid "Departments"
+msgstr "Отделы"
+
 msgctxt "Languages::department"
 msgid "Department"
 msgstr "Отдел"
